Fix gap issue on Safari

--- a/styles/components/Team.module.scss
+++ b/styles/components/Team.module.scss
@@ -41,7 +41,7 @@
 .Team {
   // background-color: black;
   padding: 2rem 0;
-  display: flex;
+  display: grid;
   flex-direction: column;
   gap: 3rem;
 }
